apps/appiecal-calendar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appiecal-calendar
  namespace: default
  annotations:
    secrets.phase.dev/redeploy: 'true'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appiecal-calendar
  template:
    metadata:
      labels:
        app: appiecal-calendar
    spec:
      containers:
        - name: appiecal-calendar
          image: ghcr.io/ijskoud/appiecal-calendar@sha256:f2df1adf7e9537feaa99afa8c77a3209980b06659e29d81db8beba3cfdfffa2b
          ports:
            - containerPort: 8080
