apps/appiecal-calendar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appiecal-calendar
  namespace: default
spec:
  selector:
    app: appiecal-calendar
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
